Fixed paragraph alignment issue

--- a/grav/user/themes/haywire/sass/partials/_contentblock.sass
+++ b/grav/user/themes/haywire/sass/partials/_contentblock.sass
@@ -55,7 +55,7 @@
             margin: 0 auto 25px
             text-align: center
         p 
-            margin: 0 !important;
+            margin: 0 auto !important;
         &.is-bg-primary
             h2
                 @extend .is-blue-tiffany
